--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <div>Preço Total:
+        <div class="total-price"></div>
+      </div>
       </section>
     </section>
   </body>
