--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
         <div>Preço Total:
-        <div class="total-price"></div>
-      </div>
+          <div class="total-price"></div>
+        </div>
+        <p class="loading">Loading...</p>
       </section>
     </section>
   </body>
